traces/bug_797.txt
examples++-load/medit.cpp:2343: error: DEAD_STORE
  The value written to &wait (type _Bool) is never used.
Showing all 1 steps of the trace


examples++-load/medit.cpp:2343:3: Write of unused value
2341.     delete [ ] numTht;
2342.     // fermeture du stream pour popen
2343.     bool wait=TheWait;
          ^
2344.     if (nargs[3]) wait= GetAny<bool>((*nargs[3])(stack));
2345.     
